# pdfium-reader

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md
cmake/: detect_gl.cmake  global.cmake
cmake/global/: macros.cmake
docs/: notes.md  pdfium.md
samples/: CMakeLists.txt  CPPLINT.cfg  pdfium_start.c
samples/further/: CMakeLists.txt  pdf_info.cc  pdf_render.cc
samples/pdf/: CMakeLists.txt  helper.cc  helper.h  pdf_render.cc
samples/ui/: CMakeLists.txt  glfw_demo.cc  imgui_demo.cc
src/: CMakeLists.txt  config.h  config.h.in  global.h  main.cc
src/base/: CMakeLists.txt  event.h  glfw_base_types.h  image.cc  image.h  imgui_base.h  types.h
src/pdf/: CMakeLists.txt  pdfdocument.cc  pdfdocument.h  pdfdocument_p.h  pdfevent.h  pdfglobal.cc  pdfglobal.h  pdfloader.cc  pdfloader.h
src/ui/: CMakeLists.txt  page.cc  page.h  ui.cc  ui.h
src/ui/base/: CPPLINT.cfg  glfw.hpp  glfw_base.cc  glfw_base.h  imgui.hpp  imgui_base.cc  imgui_base.h
src/ui/gl/: gl.h  shader.h  texture.h
src/ui/native/: filedialog.h  filedialog_nfd.cc  native.h  native_nfd.cc
src/util/: CPPLINT.cfg  log.h  logger.h  numbers.h  strings.h
